added navbar helper and edited main.css

--- a/project/html/pages/index.ejs
+++ b/project/html/pages/index.ejs
@@ -3,6 +3,10 @@
     <% include ../helpers/head %>
 </head>
 
+<header>
+  <% include ../helpers/navbar %>
+</header>
+
 <body>
 
   <!-- the classes 'page-header' and 'btn btn-default' create bootstrap components.  -->
